# scribbler-server

./: .gitignore  Cargo.toml  README.md  config.template.toml
src/: config.rs  errors.rs  lib.rs  main.rs  r2d2_sqlite.rs  util.rs
src/auth/: auth_basic.rs  auth_token.rs  mod.rs  tests.rs  tokens.rs
src/communication/: errors.rs  mod.rs
src/db/: mod.rs  pool.rs  setup.rs
src/r2d2_sqlite/: mod.rs
src/responses/: emptyok.rs  errors.rs  mod.rs
src/routes/: auth.rs  errs.rs  items.rs  mod.rs
src/routes/auth_tests/: mod.rs  sign_up.rs
src/routes/items_tests/: mod.rs
