[package]
name = "scribbler_server"
version = "0.0.0"
authors = ["Kenton Hamaluik <kenton@hamaluik.ca>"]

[dependencies]
rocket = "~0.3"
rocket_codegen = "~0.3"
serde = "~1.0"
serde_json = "~1.0"
serde_derive = "~1.0"
jsonwebtoken = "~2.0"
r2d2 = "~0.8"
r2d2_sqlite = "~0.5"
rocket_cors = "~0.3"
harsh = "~0.1"
log = "~0.4"
simple_logger = "~0.5"

[dependencies.rocket_contrib]
version = "~0.3"
default-features = false
features = ["json"]

[dependencies.rusqlite]
version = "~0.14"
features = ["bundled"]
